refactor: Refactor java code