@@ -17,7 +17,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.beans.factory.annotation.Value;
@@ -124,7 +123,7 @@ public class WebSecurityConfig {
                       .password(authDetails.getValue())
                       .authorities("ROLE_USER")
                       .build())
-          .collect(Collectors.toList());
+          .toList();
     }
 
     @Bean("basicAuthenticationManager")
